# music-audiolyser

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  Makefile  README.md  chart.csv  genrePred.py  main.py  moodPred.py  otherPred.py  pyproject.toml  requirements-dev.txt  requirements.txt  videoDownload.py
data/: genres.py  moods.py
header/: genres.py  moods.py
src/: manage.py
src/backend/: settings.py  urls.py
src/backend/logging/: __init__.py  handlers.py
src/backend/templates/: base.html
src/frontend/: urls.py  views.py
src/frontend/vite/: vite.config.ts
src/frontend/vite/html/: new.html
src/frontend/vite/src/: App.tsx
src/music_app/: apps.py  views.py
src/scripts/: __init__.py
src/tensorflow_worker/: __init__.py  test.py  tfsocket.py
src/tensorflow_worker/logging/: custom.py
src/tensorflow_worker/services/: yt_downloader.py
src/tensorflow_worker/tests/: sock.py  yt.py
src/vite/: .lintstagedrc  eslint.config.js  index.html  package-lock.json  package.json  prettierrc.config.mts  tsconfig.json  vite.config.ts
src/vite/.husky/: pre-commit
src/vite/src/: App.tsx  main.tsx
vite-project/: package-lock.json
